version/0.39/_sources/api/solver/_autosummary/settings/mt_evap_cond_group.rst.txt
:orphan:

.. _mt_evap_cond_group:

mt_evap_cond_group
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.mt_evap_cond_group
    :show-inheritance:

.. rubric:: Attributes

================================================================================   ==========================================================

Attribute                                                                                                                             Summary

================================================================================   ==========================================================
:ref:`mt_evap_cond_model <mt_evap_cond_model>`                                                                Evaporation condensation model.

:ref:`mt_evap_cond_wall_evap_cond <mt_evap_cond_wall_evap_cond>`                                              Turn on wall evap cond for H-K.

:ref:`mt_evap_cond_model_coeff <mt_evap_cond_model_coeff>`                                                            Evap cond model coeffs.

:ref:`mt_evap_cond_sat_prop <mt_evap_cond_sat_prop>`                                                                     Evap cond sat props.

:ref:`mt_evap_cond_sbm_boiling <mt_evap_cond_sbm_boiling>`                             Semi-mechanistic wall-boiling model for mixture model.

:ref:`mt_evap_cond_boiling_par <mt_evap_cond_boiling_par>`                                                                Boiling parameters.

:ref:`mt_evap_cond_boil_adv_settings_on <mt_evap_cond_boil_adv_settings_on>`              Semi Mechanistic Model advanced boiling parameters.

:ref:`mt_evap_cond_sbm_boil_method <mt_evap_cond_sbm_boil_method>`                                           Semi Mechanistic Boiling method.

:ref:`mt_evap_cond_sbm_power_coeff <mt_evap_cond_sbm_power_coeff>`                                          Power law superposition constant.

:ref:`mt_evap_cond_sbm_sphf_par <mt_evap_cond_sbm_sphf_par>`                                          Single phase heat flux parameter group.

:ref:`mt_evap_cond_sbm_ref_quant <mt_evap_cond_sbm_ref_quant>`                                                      Boiling model ref quants.

:ref:`mt_evap_cond_sbm_nuchf_par <mt_evap_cond_sbm_nuchf_par>`                                   Nucleate boiling model reference quantities.

:ref:`mt_evap_cond_sbm_boil_model_exp_opt <mt_evap_cond_sbm_boil_model_exp_opt>`                                Boiling model expert options.

================================================================================   ==========================================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`mass_transfer_list_child <mass_transfer_list_child>`       'child_object_type' of mass_transfer_list.

==========================================================   ==============================================

